# displayz

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  publish.yml  release.yml
examples/: find.rs  primary.rs  resolution.rs  upside-down.rs
src/: display.rs  json.rs  lib.rs  main.rs  properties.rs  types.rs
src/common/: mod.rs
tests/: find_display.rs  orientation.rs  primary_display.rs
