[package]
name = "displayz"
version = "0.2.0"
authors = ["Michael Lohr <michael@lohr.dev>", "Schuwi <Schuwi@protonmail.ch>"]
description = "A CLI tool and library to control display settings on Windows written in Rust. "
edition = "2024"
readme = "README.md"
repository = "https://github.com/michidk/displayz"
documentation = "https://github.com/michidk/displayz"
homepage = "https://github.com/michidk/displayz"
license = "MIT"
keywords = ["display", "settings", "cli"]
categories = ["command-line-utilities", "config"]

[dependencies]
color-eyre = "0.6.5"
env_logger = "0.11.8"
log = "0.4.29"
structopt = "0.3.26"
thiserror = "2.0.17"
winsafe = { version = "0.0.26", features = ["user"] }
