[package]
name = "displayz"
version = "1.0.0"
authors = ["Michael Lohr <michael@lohr.dev>", "Schuwi <Schuwi@protonmail.ch>"]
description = "A CLI tool and library to control display settings on Windows written in Rust. "
edition = "2024"
readme = "README.md"
repository = "https://github.com/michidk/displayz"
documentation = "https://github.com/michidk/displayz"
homepage = "https://github.com/michidk/displayz"
license = "MIT"
keywords = ["display", "settings", "cli"]
categories = ["command-line-utilities", "config"]

[dependencies]
color-eyre = "0.6.5"
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
structopt = "0.3.26"
thiserror = "2.0.17"
windows = { version = "0.62.2", features = [
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
    "Win32_Foundation",
] }

[features]
default = ["json"]
json = ["dep:serde", "dep:serde_json"]
